fix: some codes

--- a/app/views/nba_teams/index.html.erb
+++ b/app/views/nba_teams/index.html.erb
@@ -2,7 +2,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>NBA RATING 2018-2019</h1>
+<h1>NBA Glicko RATING 2018-2019</h1>
 
 <table class="table table-hover team-score-table">
   <thead>
